test/compile-fail/scope/use-pub-self-mod/top.rhdl
mod a {
    mod b {
        pub(self) struct c {}
    }
}

use a::b::c;
